--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <resources>
-  <style name="AppThemeBase" parent="android:Theme">
+
+  <style name="AppThemeBase" parent="Theme.AppCompat.Light.DarkActionBar">
   </style>
   <style name="AppTheme" parent="AppThemeBase">
   </style>
